--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: #1c1c1c;
+            background: transparent; /* ทำให้โปร่งใสเพื่อให้ ::before แสดงผล */
             border-radius: 20px;
             overflow: hidden;
         }
