--- a/templates/login.html
+++ b/templates/login.html
@@ -37,11 +37,11 @@
         .box::before {
             content: "";
             position: absolute;
-            /* === ปรับขนาดกลับมาเท่าเดิมเพื่อให้แสงขาดที่มุม === */
             width: 400%; 
             height: 400%;
             top: -150%;
             left: -150%;
+            /* === แก้ไขตรงนี้ === */
             background: linear-gradient(45deg, #00f5ff, #ff0077);
             filter: drop-shadow(0 15px 50px #000);
             animation: rotating 6s linear infinite;
